<resources>
    <string name="app_name">Katalog Game Indonesia</string>

    <string name="name">Nama Game</string>
    <string name="genre">Genre:</string>
    <string name="description">Deskripsi Game</string>
    <string name="about">Tentang Saya</string>
    <string name="about_name">Sayid Achmad Maulana</string>
    <string name="about_email">syaidahmad7z@gmail.com</string>
    <string name="share">Bagikan Game</string>
    <string name="publisher">Penerbit:</string>
    <string name="developer">Pengembang:</string>
    <string name="release_date">Tanggal Rilis:</string>
    <string name="price">Harga:</string>
    <string name="information">Informasi Game</string>
    <string-array name="data_price">
        <item>Rp 99.900</item>
        <item>Gratis</item>
        <item>Rp 84.999</item>
        <item>Rp 245.999</item>
        <item>Rp 130.999</item>
        <item>Rp 165.999</item>
        <item>Rp 165.999</item>
        <item>Rp 165.999</item>
        <item>Rp 135.000</item>
        <item>Rp 169.000</item>
    </string-array>
    <string-array name="data_release_date">
        <item>19 Januari 2023</item>
        <item>24 Juni 2020</item>
        <item>29 Januari 2020</item>
        <item>11 Oktober 2022</item>
        <item>15 Mei 2014</item>
        <item>5 Oktober 2023</item>
        <item>21 Agustus 2024</item>
        <item>22 September 2022</item>
        <item>31 Maret 2023</item>
        <item>22 Juni 2023</item>
    </string-array>
    <string-array name="data_developer">
        <item>Mojiken</item>
        <item>Agate Games</item>
        <item>Toge Productions</item>
        <item>Stairway Games</item>
        <item>Digital Happiness</item>
        <item>Gambir Game Studio</item>
        <item>GameChanger Studio</item>
        <item>MassHive Media</item>
        <item>Gamecom Team</item>
        <item>Agate Games</item>
    </string-array>
    <string-array name="data_publisher">
        <item>Toge Productions</item>
        <item>Agate Games</item>
        <item>Toge Productions</item>
        <item>Humble Bundle</item>
        <item>Digital Happiness</item>
        <item>Gambir Game Studio, PQube</item>
        <item>Neon Doctrine, Another Indie</item>
        <item>Playdigious, PQube</item>
        <item>indie.io</item>
        <item>PQube</item>
    </string-array>
    <string-array name="data_name">
        <item>A Space For The Unbound</item>
        <item>Code Atma</item>
        <item>Coffee Talk</item>
        <item>Coral Island</item>
        <item>Dreadout</item>
        <item>Knight vs Giant</item>
        <item>My Lovely Empress</item>
        <item>Potion Permit</item>
        <item>Troublemaker</item>
        <item>Valthirian Arc 2</item>
    </string-array>
    <string-array name="data_description">
        <item>Game petualangan naratif yang mengeksplorasi kesehatan mental, kenangan, dan hubungan dalam latar belakang Indonesia pada tahun 90-an. Dalam perjalanan ini, pemain akan menghadapi berbagai tantangan emosional dan harus membuat keputusan yang akan memengaruhi jalan cerita dan hubungan antar karakter.</item>
        <item>RPG mobile yang memadukan dunia mistis dengan teknologi modern, di mana kamu mengumpulkan dan melatih Atma, makhluk mistis yang kuat. Dalam permainan ini, pemain akan menjelajahi berbagai lokasi, bertarung melawan musuh, dan memecahkan teka-teki untuk meningkatkan kekuatan Atma mereka.</item>
        <item>Visual novel yang berfokus pada kehidupan barista di sebuah kafe fantasi, mendengarkan cerita pelanggan dan meramu minuman unik untuk mereka. Setiap keputusan yang diambil pemain akan mempengaruhi hubungan dengan karakter yang berbeda dan membuka berbagai jalur cerita yang menarik.</item>
        <item>Simulasi pertanian tropis dengan tema pulau, di mana kamu mengelola lahan pertanian, berinteraksi dengan penduduk desa, dan memperbaiki lingkungan. Pemain dapat menanam berbagai jenis tanaman, membesarkan hewan, dan berpartisipasi dalam festival lokal untuk memperkuat hubungan dengan komunitas.</item>
        <item>Game horor bertema survival yang mengikuti petualangan seorang siswi SMA yang terjebak di dunia penuh makhluk gaib dan misteri. Pemain harus memecahkan teka-teki, menemukan petunjuk, dan bertahan hidup dari ancaman yang mengintai di setiap sudut, sambil mengungkap rahasia yang gelap dari sekolahnya.</item>
        <item>Game aksi di mana kamu berperan sebagai kesatria yang melawan raksasa dalam pertempuran epik dengan elemen RPG dan strategi. Pemain dapat mengupgrade senjata dan kemampuan, serta menjalin aliansi dengan karakter lain untuk mengalahkan musuh yang semakin kuat.</item>
        <item>Simulasi kerajaan di mana kamu berperan sebagai seorang permaisuri yang harus mengelola kekaisaran sambil mempertahankan hubungan romantisnya. Pemain akan membuat keputusan politik, merancang strategi untuk mengembangkan kerajaan, dan menghadapi tantangan dari musuh serta intrik istana.</item>
        <item>RPG simulasi kehidupan di mana kamu berperan sebagai alkemis yang membantu penduduk desa dengan meracik ramuan dan mengobati penyakit mereka. Selain mengumpulkan bahan-bahan, pemain juga dapat menjelajahi hutan, menghadapi monster, dan menemukan resep rahasia untuk ramuan yang lebih kuat.</item>
        <item>Action-adventure berlatar belakang kehidupan sekolah Indonesia, di mana kamu mengendalikan karakter untuk bertarung melawan pembully dan menghadapi tantangan akademis. Pemain akan berinteraksi dengan teman sekelas, menyelesaikan misi, dan menemukan cara untuk mengatasi konflik sambil tetap fokus pada pelajaran.</item>
        <item>Game strategi dan manajemen sekolah fantasi, di mana kamu melatih pahlawan masa depan dan mengembangkan akademi untuk mengalahkan musuh yang datang. Pemain dapat merekrut siswa, meningkatkan fasilitas, dan merancang kurikulum untuk mempersiapkan pahlawan terbaik dalam pertempuran melawan ancaman yang lebih besar.</item>
    </string-array>
    <string-array name="data_genre">
        <item>Petualangan Naratif</item>
        <item>RPG</item>
        <item>Visual Novel</item>
        <item>Simulasi Pertanian</item>
        <item>Horor Survival</item>
        <item>Aksi, RPG</item>
        <item>Simulasi Kerajaan, Romansa</item>
        <item>RPG, Simulasi Kehidupan</item>
        <item>Aksi, Petualangan</item>
        <item>Strategi, Manajemen</item>
    </string-array>
    <integer-array name="data_photo">
        <item>@drawable/a_space_for_the_unbound</item>
        <item>@drawable/code_atma</item>
        <item>@drawable/coffee_talk</item>
        <item>@drawable/coral_island</item>
        <item>@drawable/dreadout</item>
        <item>@drawable/knight_vs_giant</item>
        <item>@drawable/my_lovely_empress</item>
        <item>@drawable/potion_permit</item>
        <item>@drawable/troublemaker</item>
        <item>@drawable/valthirian_arc_2</item>
    </integer-array>
</resources>